Fixing CPA jobs alignment issue

--- a/css/_common.less
+++ b/css/_common.less
@@ -1679,7 +1679,9 @@ input[type="file"].upload-input { display: none; }
 }
 
 /* General */
-
+.flex-mtrout {
+    margin-top: 18px;
+}
 .flex-title {
     color: @primary_color;
     font-size: 1.6em;
