--- a/css/cpajobs.css
+++ b/css/cpajobs.css
@@ -1717,6 +1717,9 @@ input[type="file"].upload-input {
   vertical-align: middle;
 }
 /* General */
+.flex-mtrout {
+  margin-top: 18px;
+}
 .flex-title {
   color: #006fba;
   font-size: 1.6em;
