--- a/css/jobcentre_admin.css
+++ b/css/jobcentre_admin.css
@@ -1758,6 +1758,9 @@ input[type="file"].upload-input {
   vertical-align: middle;
 }
 /* General */
+.flex-mtrout {
+  margin-top: 18px;
+}
 .flex-title {
   color: #414141;
   font-size: 1.6em;
